option(
	'framework',
	type: 'combo',
	choices: ['none', 'openmp', 'opencl' ],
	value: 'none'
)

option(
	'blas',
	type: 'combo',
	value: 'openblas',
	choices: ['openblas', 'mkl'],
	description: 'basic linear algebra library'
)

option(
	'lapack',
	type: 'combo',
	value: 'netlib',
	choices: ['netlib', 'mkl'],
	description: 'linear algebra library'
)
